k8s/kustomize/logging/kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhookie-kibana-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - http:
        paths:
          - path: /kibana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: webhookie-kibana-kb-http
                port:
                  number: 5601
